--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "antd": "^5.4.7",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
+    "npm": "^9.6.6",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
     "react-player": "^2.12.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "sass": "^1.62.1",
