--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "antd": "^5.4.7",
+    "axios": "^1.4.0",
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "npm": "^9.6.6",
