--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^18.2.4",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
+    "env-cmd": "^10.1.0",
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "npm": "^9.6.6",
@@ -34,6 +35,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:dev": "env-cmd -f .env.dev npm start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
