--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.4.7",
     "axios": "^1.4.0",
     "env-cmd": "^10.1.0",
+    "i18next": "^22.5.0",
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "npm": "^9.6.6",
@@ -24,6 +25,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-i18next": "^12.3.1",
     "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
