--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "npm": "^9.6.6",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
