--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.9",
+    "react-image-crop": "^10.0.11",
     "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
