--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-hook-form": "^7.43.9",
     "react-i18next": "^12.3.1",
     "react-image-crop": "^10.0.11",
+    "react-intersection-observer": "^9.4.3",
     "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.1",
